--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -11,7 +11,7 @@
         <p:growl id="msg" for="loginMsg" showDetail="true"/>
         <p:outputLabel value="Your name:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:inputText id="username" placeholder="User name" name="username" required="required"
+        <p:inputText id="username" placeholder="User name" name="username" required="required" value="#{userService.user.fullName}"
                      styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <p:outputLabel value="Password:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
@@ -27,14 +27,6 @@
     </form>
     <h:form styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
         <p:commandButton value="Registration" action="registration?faces-redirect=true"/>
-    </h:form>
-
-    <h:form prependId="false">
-        <h:outputLabel value="User Id: "  />
-        <h:inputText id="j_username" label="User Id" required="true" value="#{userService.user.fullName}" />
-        <h:outputLabel value="Password: "  for ="password" />
-        <h:inputSecret id="j_password" value="#{userService.password}" />
-        <h:commandButton value="Submit" action="#{userService.login}" />
     </h:form>
 </h:body>
 </html>
