--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,30 +1,29 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>login</title>
     <h:outputStylesheet library="css" name="login.css"/>
 </h:head>
 <h:body>
-    <form action="#{request.contextPath}/j_spring_security_check" method="post" class="ui-g">
+    <form action="${request.contextPath}/appLogin" method="post" class="ui-g">
         <p:growl id="msg" for="loginMsg" showDetail="true"/>
         <p:outputLabel value="Your name:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:inputText id="username" placeholder="User name" name="username" required="required" value="#{userService.user.fullName}"
-                     styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
+        <p:inputText id="app_username" name="app_username" placeholder="Name"
+                     class="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <p:outputLabel value="Password:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:password id="password" placeholder="Password" name="password" required="required"
-                    styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-
+        <p:password id="app_password" name="app_password" placeholder="Password"
+                    class="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <div class="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
-            <button type="submit"
+            <button type="submit" value="Login"
                     class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only Wid60">
                 <span class="ui-button-text">Login</span>
             </button>
         </div>
     </form>
+
     <h:form styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
         <p:commandButton value="Registration" action="registration?faces-redirect=true"/>
     </h:form>
