--- a/src/main/webapp/registration.xhtml
+++ b/src/main/webapp/registration.xhtml
@@ -17,7 +17,7 @@
         <p:password id="toggle" value="#{userService.password}" toggleMask="true" redisplay="true"
                     styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <div class="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
-            <p:commandButton value="Registration" update="msg" action="#{userService.registrationUser()}"/>
+            <p:commandButton value="Registration" update="msg" action="#{userService.singIn()}"/>
         </div>
     </h:form>
 </h:body>
