--- a/src/main/webapp/secure/admin/user-list.xhtml
+++ b/src/main/webapp/secure/admin/user-list.xhtml
@@ -36,6 +36,7 @@
                 <p:commandButton value="Delete" styleClass="ui-button-danger" />
             </p:column>
         </p:dataTable>
+        <p:commandButton value="Add new user" icon="pi pi-fw pi-plus" action="add-user?faces-redirect=true"/>
     </div>
 
     <form action="${request.contextPath}/appLogout" method="POST">
