--- a/src/main/webapp/secure/admin/user-list.xhtml
+++ b/src/main/webapp/secure/admin/user-list.xhtml
@@ -1,27 +1,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
-<f:metadata>
-    <f:viewAction action="#{adminService.setUserList()}"/>
-</f:metadata>
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
     <title>User list</title>
     <h:outputStylesheet library="css" name="user-list.css"/>
 </h:head>
 <h:body>
-    <h:form id="navbar">
-        <p:menubar>
-            <p:submenu label="#{userService.user.fullName}" class="float-right" icon="pi pi-fw pi-user">
-                <p:menuitem value="Members" icon="pi pi-fw pi-users" action="/secure/members.xhtml?faces-redirect=true"/>
-                <p:menuitem value="Logout" icon="pi pi-fw pi-sign-out" selectionMode="multiple" class="hider"
-                            onclick="triggerButton1Click()"/>
-            </p:submenu>
-        </p:menubar>
-    </h:form>
+    <p:growl widgetVar="globalMessage"/>
+    <ui:insert name = "menu" >
+        <ui:include src = "../menu.xhtml" />
+    </ui:insert>
 
     <div class="ui-g">
-        <p:dataTable id="usersTable" var="user" value="#{adminService.userList}"
+        <p:dataTable id="usersTableAdmin" var="user" value="#{adminService.userList}"
                      styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
             <p:column headerText="All Users">
                 <h:outputText value="#{user.fullName}"/>
@@ -30,18 +23,18 @@
                 <h:outputText value="#{user.role}"/>
             </p:column>
             <p:column width="47">
-                <p:commandButton value="Edit"/>
+                <p:commandButton action = "#{adminService.edit(user)}" value="Edit"/>
             </p:column>
             <p:column width="67">
-                <p:commandButton value="Delete" styleClass="ui-button-danger" />
+                <p:commandButton action="#{adminService.deleteUser(user)}"  value="Delete" styleClass="ui-button-danger" />
             </p:column>
         </p:dataTable>
         <p:commandButton value="Add new user" icon="pi pi-fw pi-plus" action="add-user?faces-redirect=true"/>
     </div>
 
-    <form action="${request.contextPath}/appLogout" method="POST">
-        <input id="buttonLogout" type="submit" style="display: none;"/>
-    </form>
     <h:outputScript library="js" name="script.js"/>
+    <f:websocket channel="adminChannel" onmessage="onmessage">
+        <f:ajax event="updateUserTable" render="usersTableAdmin"/>
+    </f:websocket>
 </h:body>
 </html>
