--- a/src/main/webapp/secure/admin/edit.xhtml
+++ b/src/main/webapp/secure/admin/edit.xhtml
@@ -1,14 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-    <title>Create user</title>
+    <title>Edit user</title>
     <h:outputStylesheet library="css" name="add-user.css"/>
 </h:head>
 <h:body>
-    <p:growl widgetVar="globalMessage"/>
     <ui:insert name = "menu" >
         <ui:include src = "../menu.xhtml" />
     </ui:insert>
@@ -17,22 +15,16 @@
         <p:growl id="msg" for="loginMsg" showDetail="true"/>
         <p:outputLabel value="User name:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:inputText value="#{registrationService.user.fullName}"
+        <p:inputText value="#{adminService.fullName}"
                      styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:outputLabel value="Password:"
-                       styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:password id="toggle" value="#{registrationService.password}" toggleMask="true" redisplay="true"
-                    styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <p:outputLabel value="Role Admin:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:selectBooleanCheckbox value="#{registrationService.roleAdmin}"/>
+        <p:selectBooleanCheckbox value="#{adminService.roleAdmin}"/>
         <div class="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
-            <p:commandButton value="Save" update="msg" action="#{registrationService.addUserToList()}"/>
+            <p:commandButton value="Save" update="msg" action="#{adminService.save()}"/>
             <p:commandButton value="User list" update="msg" action="user-list?faces-redirect=true"/>
         </div>
     </h:form>
-
     <h:outputScript library="js" name="script.js"/>
-    <f:websocket channel="adminChannel" onmessage="onmessage"/>
 </h:body>
 </html>
