Add role Spring Security

--- a/src/main/webapp/secure/user/members.xhtml
+++ b/src/main/webapp/secure/user/members.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
     <ui:insert name = "menu" >
-        <ui:include src = "menu.xhtml" />
+        <ui:include src = "../menu.xhtml" />
     </ui:insert>
 
     <p:growl widgetVar="globalMessage"/>
