--- a/src/main/webapp/secure/menu.xhtml
+++ b/src/main/webapp/secure/menu.xhtml
@@ -16,7 +16,7 @@
                 </p:submenu>
                 <p:submenu label="#{userService.user.fullName}" icon="pi pi-fw pi-user" style="float: right;">
                     <p:menuitem value="Members" icon="pi pi-fw pi-users"
-                                action="/secure/members.xhtml?faces-redirect=true"/>
+                                action="/secure/user/members.xhtml?faces-redirect=true"/>
                     <p:menuitem value="Admin menu" icon="pi pi-fw pi-lock" action="/secure/admin/user-list.xhtml?faces-redirect=true"
                                 access="hasAnyAuthority('ADMIN')"/>
                     <p:menuitem value="Logout" icon="pi pi-fw pi-sign-out" selectionMode="multiple" class="hider"
