--- a/src/main/webapp/secure/admin/userList.xhtml
+++ b/src/main/webapp/secure/admin/userList.xhtml
@@ -29,9 +29,12 @@
                 <p:commandButton action="#{adminService.deleteUser(user)}"  value="Delete" styleClass="ui-button-danger" />
             </p:column>
         </p:dataTable>
-        <p:commandButton value="Add new user" icon="pi pi-fw pi-plus" action="add-user?faces-redirect=true"/>
+        <p:commandButton value="Add new user" icon="pi pi-fw pi-plus" action="addUser?faces-redirect=true"/>
     </div>
 
     <h:outputScript library="js" name="script.js"/>
+    <f:websocket channel="adminChannel" onmessage="onmessage">
+        <f:ajax event="updateUserTable" render="usersTableAdmin"/>
+    </f:websocket>
 </h:body>
 </html>
