--- a/src/main/webapp/registration.xhtml
+++ b/src/main/webapp/registration.xhtml
@@ -10,14 +10,14 @@
         <p:growl id="msg" for="loginMsg" showDetail="true"/>
         <p:outputLabel value="Your name:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:inputText value="#{registrationService.user.fullName}"
+        <p:inputText value="#{registrationBean.user.fullName}"
                      styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <p:outputLabel value="Password:"
                        styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
-        <p:password id="toggle" value="#{registrationService.password}" toggleMask="true" redisplay="true"
+        <p:password id="toggle" value="#{registrationBean.password}" toggleMask="true" redisplay="true"
                     styleClass="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4"/>
         <div class="ui-g-offset-2 ui-g-8 ui-md-offset-3 ui-md-6 ui-lg-offset-4 ui-lg-4">
-            <p:commandButton value="Registration" update="msg" action="#{registrationService.registration()}"/>
+            <p:commandButton value="Registration" update="msg" action="#{registrationBean.registration()}"/>
             <p:commandButton value="Login" update="msg" action="login?faces-redirect=true"/>
         </div>
     </h:form>
