--- a/src/main/webapp/WEB-INF/jsf/logout.xhtml
+++ b/src/main/webapp/WEB-INF/jsf/logout.xhtml
@@ -1,6 +1,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:metadata>
-    <f:viewAction action="#{userService.logout()}"/>
+    <f:viewAction action="#{loginLogoutBean.logout()}"/>
 </f:metadata>
 </html>
