--- a/src/main/webapp/secure/admin/userList.xhtml
+++ b/src/main/webapp/secure/admin/userList.xhtml
@@ -23,7 +23,7 @@
                 <h:outputText value="#{user.role}"/>
             </p:column>
             <p:column width="47">
-                <p:commandButton action = "#{editBean.edit(user)}" value="Edit"/>
+                <p:commandButton action = "#{userListBean.edit(user)}" value="Edit"/>
             </p:column>
             <p:column width="67">
                 <p:commandButton action="#{userListBean.deleteUser(user)}"  value="Delete" styleClass="ui-button-danger" />
